--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.5.0"
+    "playwright": "^1.40.0"
   },
   "engines": {
     "node": ">=18.0.0"
